--- a/google.css
+++ b/google.css
@@ -39,13 +39,27 @@ input{
     align-content: right;
 }
 
-
+.middle{
+    text-align: center;
+}
 
 .search_bar{
     width: 678px;
 }
 
+.search{
+    width: 550px;
+    border-style: solid; 
+    border: 2px;
+    border-color: rgb(218, 213, 213);
+    box-shadow: 2px 2px 2px 2px rgb(223, 220, 220);
+    margin: 0 auto;
+}
 
+input{
+    border: none;
+    width: 100%;
+}
 
 .middle_cell{
     column-width: 530px;
@@ -76,13 +90,17 @@ button{
 }
 
 .bottom{
-    bottom:10px;
+    bottom:0px;
+    padding-bottom: 5px;
     position: absolute;
     color: dimgrey;
     font-size: 18px;
     padding-left:15px;
     width: 100%;
     background-color: #f2f2f2;
+}
+.line{
+    border-bottom: 1px solid darkslategray;
 }
 
 .bottom_link{
